--- a/doxygen.css
+++ b/doxygen.css
@@ -22,8 +22,8 @@ h1.groupheader {
 }
 
 h2.groupheader {
-	border-bottom: 1px solid #FECD70;
-	color: #DA8E00;
+	border-bottom: 1px solid #FFD3A0;
+	color: #FE9D2D;
 	font-size: 150%;
 	font-weight: normal;
 	margin-top: 1.75em;
@@ -113,7 +113,7 @@ h3.version {
 }
 
 div.navtab {
-	border-right: 1px solid #FFD993;
+	border-right: 1px solid #FEDEB8;
 	padding-right: 15px;
 	text-align: right;
 	line-height: 110%;
@@ -177,7 +177,7 @@ dt.alphachar{
 }
 
 .classindex dl.odd {
-	background-color: #FFFCF7;
+	background-color: #FFFCFA;
 }
 
 @media(min-width: 1120px) {
@@ -196,13 +196,13 @@ dt.alphachar{
 /* @group Link Styling */
 
 a {
-	color: #F29D00;
+	color: #FEA641;
 	font-weight: normal;
 	text-decoration: none;
 }
 
 .contents a:visited {
-	color: #FFAC11;
+	color: #FFB25A;
 }
 
 a:hover {
@@ -221,11 +221,11 @@ a.elRef {
 }
 
 a.code, a.code:visited, a.line, a.line:visited {
-	color: #FFAC11; 
+	color: #FFB25A; 
 }
 
 a.codeRef, a.codeRef:visited, a.lineRef, a.lineRef:visited {
-	color: #FFAC11; 
+	color: #FFB25A; 
 }
 
 a.code.hl_class { /* style for links to class names in code snippets */ }
@@ -281,8 +281,8 @@ ul {
 }
 
 pre.fragment {
-        border: 1px solid #FEE7BB;
-        background-color: #FEFDFB;
+        border: 1px solid #FEEAD3;
+        background-color: #FFFDFC;
         padding: 4px 6px;
         margin: 4px 8px 4px 2px;
         overflow: auto;
@@ -296,8 +296,8 @@ pre.fragment {
 div.fragment {
   padding: 0 0 1px 0; /*Fixed: last line underline overlap border*/
   margin: 4px 8px 4px 2px;
-	background-color: #FEFDFB;
-	border: 1px solid #FEE7BB;
+	background-color: #FFFDFC;
+	border: 1px solid #FEEAD3;
 }
 
 div.line {
@@ -414,9 +414,9 @@ div.contents {
 }
 
 td.indexkey {
-	background-color: #FEF7E8;
+	background-color: #FFF8F1;
 	font-weight: bold;
-	border: 1px solid #FEE7BB;
+	border: 1px solid #FEEAD3;
 	margin: 2px 0px 2px 0;
 	padding: 2px 10px;
         white-space: nowrap;
@@ -424,14 +424,14 @@ td.indexkey {
 }
 
 td.indexvalue {
-	background-color: #FEF7E8;
-	border: 1px solid #FEE7BB;
+	background-color: #FFF8F1;
+	border: 1px solid #FEEAD3;
 	padding: 2px 10px;
 	margin: 2px 0px;
 }
 
 tr.memlist {
-	background-color: #FEF8EB;
+	background-color: #FEF9F2;
 }
 
 p.formulaDsp {
@@ -468,7 +468,7 @@ img.footer {
 }
 
 .compoundTemplParams {
-	color: #FFAC11;
+	color: #FFB25A;
 	font-size: 80%;
 	line-height: 120%;
 }
@@ -520,15 +520,15 @@ span.vhdllogic {
 }
 
 blockquote {
-        background-color: #FFFBF5;
-        border-left: 2px solid #FED68A;
+        background-color: #FFFCF9;
+        border-left: 2px solid #FFDBB2;
         margin: 0 24px 0 4px;
         padding: 0 12px 0 16px;
 }
 
 blockquote.DocNodeRTL {
    border-left: 0;
-   border-right: 2px solid #FED68A;
+   border-right: 2px solid #FFDBB2;
    margin: 0 4px 0 24px;
    padding: 0 16px 0 12px;
 }
@@ -561,18 +561,18 @@ td.tiny {
 .dirtab {
 	padding: 4px;
 	border-collapse: collapse;
-	border: 1px solid #FFD993;
+	border: 1px solid #FEDEB8;
 }
 
 th.dirtab {
-	background: #FEF7E8;
+	background: #FFF8F1;
 	font-weight: bold;
 }
 
 hr {
 	height: 0px;
 	border: none;
-	border-top: 1px solid #FFAF1C;
+	border-top: 1px solid #FFB562;
 }
 
 hr.footer {
@@ -607,7 +607,7 @@ table.memberdecls {
 .mdescLeft, .mdescRight,
 .memItemLeft, .memItemRight,
 .memTemplItemLeft, .memTemplItemRight, .memTemplParams {
-	background-color: #FFFCF8;
+	background-color: #FFFDFA;
 	border: none;
 	margin: 4px;
 	padding: 1px 0 0 8px;
@@ -619,7 +619,7 @@ table.memberdecls {
 }
 
 .memSeparator {
-        border-bottom: 1px solid #FFF1D9;
+        border-bottom: 1px solid #FFF3E6;
         line-height: 1px;
         margin: 0px;
         padding: 0px;
@@ -634,7 +634,7 @@ table.memberdecls {
 }
 
 .memTemplParams {
-	color: #FFAC11;
+	color: #FFB25A;
         white-space: nowrap;
 	font-size: 80%;
 }
@@ -647,15 +647,15 @@ table.memberdecls {
 
 .memtitle {
 	padding: 8px;
-	border-top: 1px solid #FFDB99;
-	border-left: 1px solid #FFDB99;
-	border-right: 1px solid #FFDB99;
+	border-top: 1px solid #FFE0BC;
+	border-left: 1px solid #FFE0BC;
+	border-right: 1px solid #FFE0BC;
 	border-top-right-radius: 4px;
 	border-top-left-radius: 4px;
 	margin-bottom: -1px;
 	background-image: url('nav_f.png');
 	background-repeat: repeat-x;
-	background-color: #FEF3DE;
+	background-color: #FFF5EA;
 	line-height: 1.25;
 	font-weight: 300;
 	float:left;
@@ -670,14 +670,14 @@ table.memberdecls {
 
 .memtemplate {
 	font-size: 80%;
-	color: #FFAC11;
+	color: #FFB25A;
 	font-weight: normal;
 	margin-left: 9px;
 }
 
 .memnav {
-	background-color: #FEF7E8;
-	border: 1px solid #FFD993;
+	background-color: #FFF8F1;
+	border: 1px solid #FEDEB8;
 	text-align: center;
 	margin: 2px;
 	margin-right: 15px;
@@ -715,14 +715,14 @@ table.memberdecls {
 }
 
 .memproto, dl.reflist dt {
-        border-top: 1px solid #FFDB99;
-        border-left: 1px solid #FFDB99;
-        border-right: 1px solid #FFDB99;
+        border-top: 1px solid #FFE0BC;
+        border-left: 1px solid #FFE0BC;
+        border-right: 1px solid #FFE0BC;
         padding: 6px 0px 6px 0px;
-        color: #A36A00;
+        color: #FA8500;
         font-weight: bold;
         text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.9);
-        background-color: #FFF2DA;
+        background-color: #FEF4E7;
         /* opera specific markup */
         box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15);
         border-top-right-radius: 4px;
@@ -741,11 +741,11 @@ table.memberdecls {
 }
 
 .memdoc, dl.reflist dd {
-        border-bottom: 1px solid #FFDB99;      
-        border-left: 1px solid #FFDB99;      
-        border-right: 1px solid #FFDB99; 
+        border-bottom: 1px solid #FFE0BC;      
+        border-left: 1px solid #FFE0BC;      
+        border-right: 1px solid #FFE0BC; 
         padding: 6px 10px 2px 10px;
-        background-color: #FEFDFB;
+        background-color: #FFFDFC;
         border-top-width: 0;
         background-image:url('nav_g.png');
         background-repeat:repeat-x;
@@ -832,11 +832,11 @@ span.mlabels {
 }
 
 span.mlabel {
-        background-color: #FEC356;
-        border-top:1px solid #FFB52E;
-        border-left:1px solid #FFB52E;
-        border-right:1px solid #FEE7BB;
-        border-bottom:1px solid #FEE7BB;
+        background-color: #FFCA8D;
+        border-top:1px solid #FFBC6F;
+        border-left:1px solid #FFBC6F;
+        border-right:1px solid #FEEAD3;
+        border-bottom:1px solid #FEEAD3;
 	text-shadow: none;
 	color: white;
 	margin-right: 4px;
@@ -855,8 +855,8 @@ span.mlabel {
 
 div.directory {
         margin: 10px 0px;
-        border-top: 1px solid #FED68A;
-        border-bottom: 1px solid #FED68A;
+        border-top: 1px solid #FFDBB2;
+        border-bottom: 1px solid #FFDBB2;
         width: 100%;
 }
 
@@ -894,7 +894,7 @@ div.directory {
 
 .directory tr.even {
 	padding-left: 6px;
-	background-color: #FFFBF5;
+	background-color: #FFFCF9;
 }
 
 .directory img {
@@ -912,11 +912,11 @@ div.directory {
         cursor: pointer;
         padding-left: 2px;
         padding-right: 2px;
-	color: #F29D00;
+	color: #FEA641;
 }
 
 .arrow {
-    color: #FED68A;
+    color: #FFDBB2;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
@@ -936,7 +936,7 @@ div.directory {
     height: 14px;
     width: 16px;
     display: inline-block;
-    background-color: #FEC356;
+    background-color: #FFCA8D;
     color: white;
     text-align: center;
     border-radius: 4px;
@@ -1001,7 +1001,7 @@ div.dynheader {
 
 address {
 	font-style: normal;
-	color: #B67600;
+	color: #FE8E0C;
 }
 
 table.doxtable caption {
@@ -1015,12 +1015,12 @@ table.doxtable {
 }
 
 table.doxtable td, table.doxtable th {
-	border: 1px solid #BF7C00;
+	border: 1px solid #FF9115;
 	padding: 3px 7px 2px;
 }
 
 table.doxtable th {
-	background-color: #E19200;
+	background-color: #FE9F32;
 	color: #FFFFFF;
 	font-size: 110%;
 	padding-bottom: 4px;
@@ -1030,7 +1030,7 @@ table.doxtable th {
 table.fieldtable {
         /*width: 100%;*/
         margin-bottom: 10px;
-        border: 1px solid #FFDB99;
+        border: 1px solid #FFE0BC;
         border-spacing: 0px;
         -moz-border-radius: 4px;
         -webkit-border-radius: 4px;
@@ -1046,8 +1046,8 @@ table.fieldtable {
 
 .fieldtable td.fieldtype, .fieldtable td.fieldname {
         white-space: nowrap;
-        border-right: 1px solid #FFDB99;
-        border-bottom: 1px solid #FFDB99;
+        border-right: 1px solid #FFE0BC;
+        border-bottom: 1px solid #FFE0BC;
         vertical-align: top;
 }
 
@@ -1056,7 +1056,7 @@ table.fieldtable {
 }
 
 .fieldtable td.fielddoc {
-        border-bottom: 1px solid #FFDB99;
+        border-bottom: 1px solid #FFE0BC;
         /*width: 100%;*/
 }
 
@@ -1075,9 +1075,9 @@ table.fieldtable {
 .fieldtable th {
         background-image:url('nav_f.png');
         background-repeat:repeat-x;
-        background-color: #FEF3DE;
+        background-color: #FFF5EA;
         font-size: 90%;
-        color: #A36A00;
+        color: #FA8500;
         padding-bottom: 4px;
         padding-top: 5px;
         text-align:left;
@@ -1088,7 +1088,7 @@ table.fieldtable {
         -webkit-border-top-right-radius: 4px;
         border-top-left-radius: 4px;
         border-top-right-radius: 4px;
-        border-bottom: 1px solid #FFDB99;
+        border-bottom: 1px solid #FFE0BC;
 }
 
 
@@ -1110,8 +1110,8 @@ table.fieldtable {
 	background-position: 0 -5px;
 	height:30px;
 	line-height:30px;
-	color:#FFCE73;
-	border:solid 1px #FEE6B8;
+	color:#FFD4A2;
+	border:solid 1px #FFE9D1;
 	overflow:hidden;
 	margin:0px;
 	padding:0px;
@@ -1126,7 +1126,7 @@ table.fieldtable {
 	background-image:url('bc_s.png');
 	background-repeat:no-repeat;
 	background-position:right;
-	color:#DC8F00;
+	color:#FE9E2F;
 }
 
 .navpath li.navelem a
@@ -1135,7 +1135,7 @@ table.fieldtable {
 	display:block;
 	text-decoration: none;
 	outline: none;
-	color: #AF7100;
+	color: #FE8B06;
 	font-family: 'Lucida Grande',Geneva,Helvetica,Arial,sans-serif;
 	text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.9);
 	text-decoration: none;        
@@ -1143,7 +1143,7 @@ table.fieldtable {
 
 .navpath li.navelem a:hover
 {
-	color:#FFBF49;
+	color:#FEC584;
 }
 
 .navpath li.footer
@@ -1155,7 +1155,7 @@ table.fieldtable {
         background-image:none;
         background-repeat:no-repeat;
         background-position:right;
-        color:#DC8F00;
+        color:#FE9E2F;
         font-size: 8pt;
 }
 
@@ -1202,9 +1202,9 @@ div.header
 {
         background-image:url('nav_h.png');
         background-repeat:repeat-x;
-	background-color: #FFFCF8;
+	background-color: #FFFDFA;
 	margin:  0px;
-	border-bottom: 1px solid #FEE7BB;
+	border-bottom: 1px solid #FEEAD3;
 }
 
 div.headertitle
@@ -1405,7 +1405,7 @@ dl.section dd {
 	padding: 0px;
 	margin: 0px;
 	width: 100%;
-	border-bottom: 1px solid #FFB52E;
+	border-bottom: 1px solid #FFBC6F;
 }
 
 .image
@@ -1440,7 +1440,7 @@ dl.section dd {
 
 div.zoom
 {
-	border: 1px solid #FFD07B;
+	border: 1px solid #FFD6A8;
 }
 
 dl.citelist {
@@ -1448,7 +1448,7 @@ dl.citelist {
 }
 
 dl.citelist dt {
-        color:#D28800;
+        color:#FF9926;
         float:left;
         font-weight:bold;
         margin-right:10px;
@@ -1464,8 +1464,8 @@ dl.citelist dd {
 
 div.toc {
         padding: 14px 25px;
-        background-color: #FEFAF3;
-        border: 1px solid #FFEFD2;
+        background-color: #FFFBF7;
+        border: 1px solid #FFF1E2;
         border-radius: 7px 7px 7px 7px;
         float: right;
         height: auto;
@@ -1494,7 +1494,7 @@ div.toc li {
 
 div.toc h3 {
         font: bold 12px/1.2 Arial,FreeSans,sans-serif;
-	color: #FFAC11;
+	color: #FFB25A;
         border-bottom: 0 none;
         margin: 0;
 }
@@ -1775,7 +1775,7 @@ table.markdownTable {
 }
 
 table.markdownTable td, table.markdownTable th {
-	border: 1px solid #BF7C00;
+	border: 1px solid #FF9115;
 	padding: 3px 7px 2px;
 }
 
@@ -1783,7 +1783,7 @@ table.markdownTable tr {
 }
 
 th.markdownTableHeadLeft, th.markdownTableHeadRight, th.markdownTableHeadCenter, th.markdownTableHeadNone {
-	background-color: #E19200;
+	background-color: #FE9F32;
 	color: #FFFFFF;
 	font-size: 110%;
 	padding-bottom: 4px;
