--- a/navtree.css
+++ b/navtree.css
@@ -120,7 +120,7 @@
 #nav-tree {
   background-image:url('nav_h.png');
   background-repeat:repeat-x;
-  background-color: #FFFCF8;
+  background-color: #FFFDFA;
   -webkit-overflow-scrolling : touch; /* iOS 5+ */
 }
 
